--- a/cubeRun/cubeRun/Info.plist
+++ b/cubeRun/cubeRun/Info.plist
@@ -49,5 +49,7 @@
 	<array>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>ITSAppUsesNonExemptEncryption</key>
+	<false/>
 </dict>
 </plist>
